--- a/src/templates/configuracion_usuario.html
+++ b/src/templates/configuracion_usuario.html
@@ -68,11 +68,12 @@
 
           <form name="myForm" action="" method="post" onsubmit="return Comprobar()">
             <br>
-             <h2  class="CampoForm">Nombre</h2><input type="text"  placeholder="Ingrese su nombre" maxlength="20" id="nombre" name="nombre" required> <br> 
+             <h2  class="CampoForm">Nombre</h2><input type="text"  placeholder="Ingrese su nombre" maxlength="20" id="nombre" name="nombre"> <br> 
                        <br>
-             <h2  class="CampoForm">Correo</h2><input type="email" placeholder="Email" id="email" name="email" required> <br> 
+             <h2  class="CampoForm">Correo</h2><input type="email" placeholder="Email" id="email" name="email"> <br> 
                          <br>
             <h2  class="CampoForm">País</h2>
+            <br>
             <select name="pais" id="pais">
               <option  value="1">Seleccione:</option>
               <option value="2">España</option>
@@ -91,7 +92,8 @@
               <option value="17">Chile</option>
               <option value="18">Argentina</option>
             </select>
-             <input class="btn btn-outline-primary save" type="submit" class="button" name="enviar" value="Guardar">
+          <br>
+            <input class="btn btn-outline-primary save" type="submit" class="button" name="enviar" value="Guardar">
           </form>
             </div>
       </div>
