--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -63,7 +63,9 @@
                         <div class="container">
                             <h2 class="text-center">Galeria</h2>
                             <div class="lightbox-gallery">
-                                    <img class="Foto" onclick="../templates/subir_imagen.html" src="../public/img/Captura de pantalla 2023-01-19 233448.png">
+                                <a href="./subir_imagen.html">
+                                <img class="Foto" src="../public/img/Captura de pantalla 2023-01-19 233448.png" width="100px" height="100px">
+                                </a>
                             </div>
                           </div>
                         
