--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -26,16 +26,16 @@
     
         <main class="form-signin" action="/login" method="POST">
           <form>
-            <img class="mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+            <img class="mb-4" src="https://storage.googleapis.com/uscimages/account.png"  alt="" width="90 " height="90">
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
         
             <div class="form-floating">
-              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-              <label for="floatingInput">Email address</label>
+              <input type="email" class="form-control" id="floatingInput" name="correo" placeholder="name@example.com">
+              <label for="username">Email address</label>
             </div>
             <div class="form-floating">
-              <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-              <label for="floatingPassword">Password</label>
+              <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="Password">
+              <label for="password">Password</label>
             </div>
         
             <div class="checkbox mb-3">
