--- a/src/templates/subir_foto.html
+++ b/src/templates/subir_foto.html
@@ -5,9 +5,9 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 		<!-- JavaScript Bundle with Popper -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="{{url_for('static',filename ='style.css')}}">
 		<title>Vista de perfil de fotos </title>
-		<link rel="stylesheet" href="../public/css/style.css" type="text/css">
-		<link rel="stylesheet" href="../public/css/Global.css">
+
 		
 
 	</head>
@@ -91,9 +91,7 @@
 			  </div>
 			</div>
             </body>
-			<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-			<script src="../public/js/like.js"></script>
-			<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-			<script src="../public/js/dislike.js"></script>
-			<script src="../public/js/comentarios.js"></script>
+			<script  src="{url_for('static',filename ='dislike.js')}}"></script>
+			<script  src="{url_for('static',filename ='comentarios.js')}}"></script>
+			<script  src="{url_for('static',filename ='like.js')}}"></script>
             </html>    
