--- a/src/templates/configuracion_usuario.html
+++ b/src/templates/configuracion_usuario.html
@@ -10,14 +10,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <title>Profile</title>
-   
+    <link rel="stylesheet" href="{{url_for('static',filename ='estilo.css')}}">
+    <title>Cofiguracion Usuarios</title>
+
+
+
 </head>
 <header>
   {% extends './menu.html' %}
   {% block menu_bar  %}
   
   {{super()}}
+</header>
 </head>
 <body>
 
@@ -98,11 +102,9 @@
             </div>
       </div>
     </div>
-    <script src="../public/js/configuracion_usuario.js"></script>
-    <script src="../public/js/alertas_configuracion_usuarios.js"></script>
-
-    
-    
+    <script  src="{url_for('static',filename ='alertas_configuracion_usuarios.js')}}"></script>
+    <script  src="{url_for('static',filename ='almacenar_imagenes.js')}}"></script>
+    {% endblock  %}
 </body>
 
 </html>
