--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -1,213 +1,60 @@
-<!DOCTYPE html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>foutos</title>
-    <html lang="en">
+<title>LOGIN</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Document</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<link rel="stylesheet" href="{{url_for('static',filename ='login_style.css')}}">
 
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>foutos art</title>
-    <link rel="stylesheet" href="../public/css/Global.css">
-    <link rel="stylesheet" href="../public/css/menu.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
-<link rel="stylesheet" href="../public/css/register_style.css">
 </head>
 <header>
-    <div class="Bar_menu">
-        <div class="picture">
-            <a href="../vistas/inicio.html"> <img src="/people/src/public/img/foutos.png" alt="foto" height="40px"></a>
-        </div>
-        <div class="central">
-            <div>
-                <a href="../vistas/comunidad.html"><button>Comunidad</button></a>
-                <button> Trending</button>
-                <button> category</button>
-            </div>
-        </div>
-        <a href="">
-            <div class="login">
-                <div>
-                    <h2>asdasd</h2>
-                </div>
-                <div> <img src="https://storage.googleapis.com/uscimages/account.png" alt="" height="35px"></div>
-
-
-
-            </div>
-        </a>
-        <div class="slider_one">
-            <div>
-                <a href="">2D</a>
-
-            </div>
-            <div>
-                <a href="">olio</a>
-
-            </div>
-            <div>
-                <a href="">3D</a>
-
-            </div>
-            <div>
-                <a href="">retrato</a>
-
-            </div>
-            <div>
-                <a href="">animales</a>
-
-            </div>
-            <div>
-                <a href="">Mitologia</a>
-
-            </div>
-        </div>
-        <div class="slider_two">
-            <div>
-                <a href="../vistas/profile.html">usuario</a>
-
-            </div>
-            <div>
-                <a href="../vistas/configuracion_usuario.html">configuracion</a>
-
-            </div>
-            <div>
-                <a href="../vistas/subir_imagen.html">upload</a>
-
-            </div>
-            <div>
-                <a href="">mis fotos</a>
-
-            </div>
-            <div>
-                <a href="">cuentas</a>
-
-            </div>
-            <div>
-                <a href="">cerrar secion </a>
-
-            </div>
-        </div>
-
-    </div>
-</header>
-
-<body>
-
-    <div class="logo">
-        <img src="../public/img/logo.png"width = "900px" alt="">
-    </div>
-<br>
-=========
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Validación de Formulario con Javascript</title>
-	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
-	<link rel="stylesheet" href="../public/css/register_style.css">
-    <link rel="stylesheet" href="{{url_for('static',filename ='register_style.css')}}">
-</head>
-<header>
-    {% extends './menu.html' %}
+{% extends './menu.html' %}
 {% block menu_bar  %}
 
 {{super()}}
 </header>
-<div class="logo">
-    <img src="../public/img/logo.png"width = "900px" alt="">
-</div>
-<br>
-<body>
-  
-<div class="container"> 
-    <div class="container_vacio">
 
-    </div>
-<div class="container_fotos">
-    <img src="../public/img/imagen2.jpg "width= "400px"  alt="">
+<body class="text-center">
 
-</div>
-	<main>
-		<form action="" class="formulario" id="formulario">
-			
-			<div class="formulario__grupo" id="grupo__usuario">
-				<label for="usuario" class="formulario__label">USER</label>
-				<div class="formulario__grupo-input">
-					<input type="text" class="formulario__input" name="usuario" id="usuario" placeholder="john123">
-					<i class="formulario__validacion-estado fas fa-times-circle"></i>
-				</div>
-				<p class="formulario__input-error">El usuario tiene que ser de 4 a 16 dígitos y solo puede contener numeros, letras y guion bajo.</p>
-			</div>
 
-			<div class="formulario__grupo" id="grupo__nombre">
-				<label for="nombre" class="formulario__label">NAME</label>
-				<div class="formulario__grupo-input">
-					<input type="text" class="formulario__input" name="nombre" id="nombre" placeholder="John Doe">
-					<i class="formulario__validacion-estado fas fa-times-circle"></i>
-				</div>
-				<p class="formulario__input-error">El usuario tiene que ser de 4 a 16 dígitos y solo puede contener numeros, letras y guion bajo.</p>
-			</div>
+    <main class="form-signin" action="/register" method="POST">
+      <form>
+        <img class="mb-4" src="https://storage.googleapis.com/uscimages/account.png"  alt="" width="90 " height="90">
+        <h1 class="h3 mb-3 fw-normal">Please register</h1>
+        <div class="form-floating">
+            <input type="text" class="form-control" id="nombre" name="nombre"placeholder="Password" >
+            <label for="username">nombre</label>
+          </div>
+          <div class="form-floating">
+            <input type="text" class="form-control" id="apellido" name="apellido" placeholder="Password">
+            <label for="username">apellido</label>
+          </div>
+        <div class="form-floating">
+          <input type="email" class="form-control" id="correo" name="correo" placeholder="name@example.com">
+          <label for="username">correo</label>
+        </div>
+        <div class="form-floating">
+          <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+          <label for="password">Password</label>
+          <div class="form-floating">
+            <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Password">
+            <label for="username">telefono</label>
+          </div>
+        </div>
+    
+        
+        </div>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">register</button>
+        
+      </form>
+    </main>
+    
+    
+        
+      
 
-		
-			<div class="formulario__grupo" id="grupo__password">
-				<label for="password" class="formulario__label">PASSWORD</label>
-				<div class="formulario__grupo-input">
-					<input type="password" class="formulario__input" name="password" id="password">
-					<i class="formulario__validacion-estado fas fa-times-circle"></i>
-				</div>
-				<p class="formulario__input-error">La contraseña tiene que ser de 4 a 12 dígitos.</p>
-			</div>
 
-			
-			<div class="formulario__grupo" id="grupo__password2">
-				<label for="password2" class="formulario__label">REPEAT PASSWORD</label>
-				<div class="formulario__grupo-input">
-					<input type="password" class="formulario__input" name="password2" id="password2">
-					<i class="formulario__validacion-estado fas fa-times-circle"></i>
-				</div>
-				<p class="formulario__input-error">Ambas contraseñas deben ser iguales.</p>
-			</div>
 
-			<div class="formulario__grupo" id="grupo__correo">
-				<label for="correo" class="formulario__label">EMAIL</label>
-				<div class="formulario__grupo-input">
-					<input type="email" class="formulario__input" name="correo" id="correo" placeholder="correo@correo.com">
-					<i class="formulario__validacion-estado fas fa-times-circle"></i>
-				</div>
-				<p class="formulario__input-error">El correo solo puede contener letras, numeros, puntos, guiones y guion bajo.</p>
-			</div>
-
-			
-			<div class="formulario__grupo" id="grupo__telefono">
-				<label for="telefono" class="formulario__label">PHONE</label>
-				<div class="formulario__grupo-input">
-					<input type="text" class="formulario__input" name="telefono" id="telefono" placeholder="4491234567">
-					<i class="formulario__validacion-estado fas fa-times-circle"></i>
-				</div>
-				<p class="formulario__input-error">El telefono solo puede contener numeros y el maximo son 14 dígitos.</p>
-			</div>
-
-			<div class="formulario__mensaje" id="formulario__mensaje">
-				<p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b> Por favor rellena el formulario correctamente. </p>
-			</div>
-
-			<div class="formulario__grupo formulario__grupo-btn-enviar">
-				<button type="submit" class="formulario__btn">Enviar</button>
-				<p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
-			</div>
-            <div id="ree">
-                    <a href="./login.html">Regresar </a>
-                </div>
-		</form>
-	</main>
-    <script  src="{url_for('static',filename ='register.js')}}"></script>
-	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
-    {% endblock  %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+{% endblock  %}
 </body>
-</html>
