--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -37,7 +37,7 @@
             <div class="login" >
               
                 <div>
-                   <h2>Rasdasdasd</h2>
+                   <h2> {{ username }}</h2>
                    
                 </div>
                 <div class="userimg"><img src="https://storage.googleapis.com/uscimages/account.png" alt="" height="35px" id="close-open"></div>
