--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -1,60 +1,85 @@
-<title>LOGIN</title>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="{{url_for('static',filename ='login_style.css')}}">
-
-</head>
-<header>
-{% extends './menu.html' %}
-{% block menu_bar  %}
-
-{{super()}}
-</header>
-
-<body class="text-center">
-
-
-    <main class="form-signin" action="/register" method="POST">
-      <form>
-        <img class="mb-4" src="https://storage.googleapis.com/uscimages/account.png"  alt="" width="90 " height="90">
-        <h1 class="h3 mb-3 fw-normal">Please register</h1>
-        <div class="form-floating">
-            <input type="text" class="form-control" id="nombre" name="nombre"placeholder="Password" >
-            <label for="username">nombre</label>
-          </div>
-          <div class="form-floating">
-            <input type="text" class="form-control" id="apellido" name="apellido" placeholder="Password">
-            <label for="username">apellido</label>
-          </div>
-        <div class="form-floating">
-          <input type="email" class="form-control" id="correo" name="correo" placeholder="name@example.com">
-          <label for="username">correo</label>
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title>Register</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+  <!-- Google Fonts -->
+  <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+ </head>
+ <body style="background-color:#ccc;">
+ <div class="container">
+   <div class="row main">
+    <div class="main-login main-center">
+    <h5>Register New user or login existing account</h5>
+     <form action="{{ url_for('register') }}" method="post" autocomplete="off"> 
+      <div class="form-group">
+       <label for="name" class="cols-sm-2 control-label">nombre</label>
+       <div class="cols-sm-10">
+        <div class="input-group">
+         <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+         <input type="text" class="form-control" name="nombre" id="fullname"  placeholder="Enter your Name"/>
         </div>
-        <div class="form-floating">
-          <input type="password" class="form-control" id="password" name="password" placeholder="Password">
-          <label for="password">Password</label>
-          <div class="form-floating">
-            <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Password">
-            <label for="username">telefono</label>
-          </div>
+       </div>
+      </div>
+      <div class="form-group">
+        <label for="username" class="cols-sm-2 control-label">apellido</label>
+        <div class="cols-sm-10">
+         <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+          <input type="text" class="form-control" name="apellido" id="username" placeholder="Enter your Username" required>
+         </div>
         </div>
-    
-        
+       </div>
+   
+      <div class="form-group">
+       <label for="email" class="cols-sm-2 control-label">correo</label>
+       <div class="cols-sm-10">
+        <div class="input-group">
+         <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+         <input type="text" class="form-control" name="correo" id="email"  placeholder="Enter your Email"/>
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">register</button>
-        
-      </form>
-    </main>
+       </div>
+      </div>
+  
     
-    
+      <div class="form-group">
+       <label for="password" class="cols-sm-2 control-label">Password</label>
+       <div class="cols-sm-10">
+        <div class="input-group">
+         <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+         <input type="password" class="form-control" name="password" placeholder="Password" id="password" required  placeholder="Enter your Password"/>
+        </div>
+       </div>
+      </div>
+  
+      <div class="form-group ">
+        {% with messages = get_flashed_messages()  %}
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          {{ message }}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+       <input type="submit" value="Register" class="form-control btn btn-primary " name="">
+       <p style="padding:5px;">
+       <a href="{{ url_for('login') }}" class="btn btn-dark ">Login</a></p>
         
-      
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-{% endblock  %}
-</body>
+      </div>
+        
+     </form>
+    </div>
+   </div>
+  </div>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  
+ </body>
+</html>
