--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="{{url_for('static',filename ='menu.css')}}">
     <div class="Bar_menu">
         <div class="picture">
-            <a href="../main"> <img src="{{url_for('static',filename ='img/foutos.png')}}" alt="foto" height="45px"></a>
+            <a href="../inicio"> <img src="{{url_for('static',filename ='img/foutos.png')}}" alt="foto" height="45px"></a>
         </div>
         <div class="central">
             <div>
