--- a/src/templates/regis.html
+++ b/src/templates/regis.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
  <head>
+  <link rel="icon" href="https://e7.pngegg.com/pngimages/182/19/png-clipart-square-shape-blue-square-s-angle-white.png" type="image/x-icon">
+
   <meta charset="utf-8">
   <title>Register</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
