--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -16,6 +16,8 @@
 
 <header>
     {% block menu_bar  %}
+    <link rel="icon" href="https://e7.pngegg.com/pngimages/182/19/png-clipart-square-shape-blue-square-s-angle-white.png" type="image/x-icon">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
     <link rel="stylesheet" href="{{url_for('static',filename ='Global.css')}}">
