--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 
+    <link rel="icon" href="https://e7.pngegg.com/pngimages/182/19/png-clipart-square-shape-blue-square-s-angle-white.png" type="image/x-icon">
     
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
