--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,3 +1,4 @@
+
 <html>
  <head>
   <meta charset="utf-8">
@@ -7,8 +8,11 @@
  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ <link rel="stylesheet" href="{{url_for('static',filename ='Global.css')}}">
  </head>
- <body style="background-color:#ccc;">
+ <body>
+  
+
   <div class="login-box" >
   <div class="login-header">Login</div>
   <div class="login-body">
@@ -38,11 +42,3 @@
  </div>
  </body>
 </html>
-        
-        
-            
-          
-   
-    
-    
-    
