--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -48,10 +48,10 @@
 
                 <form>
                     <div class="form-group">
-                        <input class="form-control" id="exampleInputPassword1" readonly value="">                    </div>
+                        <input class="form-control" id="exampleInputPassword1" readonly value="{{account['username']}}">                    </div>
                     <br>
                     <div class="form-group">
-                        <input class="form-control" id="exampleInputPassword1" readonly value="">                    </div>
+                        <input class="form-control" id="exampleInputPassword1" readonly value="{{account['fullname']}}">                    </div>
                     <br>
                     <div class="form-group">
                         <input class="form-control" id="exampleInputPassword1" readonly value="">                                             
