--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -40,22 +40,22 @@
 
             <div class="caruserl_lista">
                 <div class="carrusel_element">
-                    <img src="../public/img/inicio/5.png" alt="">
+                    <img src="{{url_for('static',filename ='img/inicio/1.jpg')}}" alt="">
                 </div>
                 <div class="carrusel_element">
-                    <img src="../public/img/inicio/6.png" alt="">
-                </div>
-
-                <div class="carrusel_element">
-                    <img src="../public/img/inicio/7.png" alt="">
+                    <img src="{{url_for('static',filename ='img/inicio/5.png')}}" alt="">
                 </div>
 
                 <div class="carrusel_element">
-                    <img src="../public/img/inicio/8.png" alt="">
+                    <img src="{{url_for('static',filename ='img/inicio/8.png')}}" alt="">
                 </div>
 
                 <div class="carrusel_element">
-                    <img src="../public/img/inicio/5.png" alt="">
+                    <img src="{{url_for('static',filename ='img/inicio/7.png')}}" alt="">
+                </div>
+
+                <div class="carrusel_element">
+                    <img src="{{url_for('static',filename ='img/inicio/2.jpg')}}" alt="">
                 </div>
 
 
@@ -76,52 +76,16 @@
     <div class="all_img">
         <div class="cont">
             <div class="cont_img">
-                <img src="../public/img/inicio/1.jpg" alt="">
+                <img src="{{url_for('static',filename ='img/imagen1.jpg')}}" alt="">
             </div>
             <div class="cont_img">
-                <img src="../public/img/inicio/2.jpg" alt="">
+                <img src="{{url_for('static',filename ='img/imagen 3.png')}}" alt="">
             </div>
             <div class="cont_img">
-                <img src="../public/img/inicio/3.jpg" alt="">
+                <img src="{{url_for('static',filename ='img/imagen2.jpg')}}" alt="">
             </div>
             <div class="cont_img">
-                <img src="../public/img/inicio/4.jpg" alt="">
-            </div>
-            <div class="cont_img">
-                <img src="../public/img/inicio/1.jpg" alt="">
-            </div>
-            <div class="cont_img">
-                <img src="../public/img/inicio/2.jpg" alt="">
-            </div>
-            <div class="cont_img">
-                <img src="../public/img/inicio/3.jpg" alt="">
-            </div>
-            <div class="cont_img">
-                <img src="../public/img/inicio/4.jpg" alt="">
-            </div>
-            <div class="cont_img">
-                <img src="../public/img/inicio/1.jpg" alt="">
-            </div>
-            <div class="cont_img">
-                <img src="../public/img/inicio/2.jpg" alt="">
-            </div>
-            <div class="cont_img">
-                <img src="../public/img/inicio/3.jpg" alt="">
-            </div>
-            <div class="cont_img">
-                <img src="../public/img/inicio/4.jpg" alt="">
-            </div>
-            <div class="cont_img">
-                <img src="../public/img/inicio/1.jpg" alt="">
-            </div>
-            <div class="cont_img">
-                <img src="../public/img/inicio/2.jpg" alt="">
-            </div>
-            <div class="cont_img">
-                <img src="../public/img/inicio/3.jpg" alt="">
-            </div>
-            <div class="cont_img">
-                <img src="../public/img/inicio/4.jpg" alt="">
+                <img src="{{url_for('static',filename ='img/imagen4.jpeg')}}" alt="">
             </div>
 
 
