--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -40,7 +40,7 @@
                 <img class="circular--square" src="../public/img/images (1).png" />
                 
                 <h1 style="margin-left:20px;color: antiquewhite;font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> Descripción</h1>
-                <h2 style= "margin-left:20px;color:antiquewhite;font-family:Arial, Helvetica, sans-serif" >Que tal? aqui puedes hablar acerca de ti.</h2>
+                <h2 style= "margin-left:20px;color:antiquewhite;font-family:Arial, Helvetica, sans-serif" >{{account['fullname']}}</h2>
             </div>
             <div class="col" style="margin-left:-40px" >
               
