--- a/src/app/static/menu.css
+++ b/src/app/static/menu.css
@@ -22,7 +22,7 @@ button{
 }
 
 .Bar_menu{
-    background-color: black;
+    background-color: rgb(18, 18, 18);
     width: 100%;
     height: 45px;
     display: grid;
