--- a/src/app/static/register.css
+++ b/src/app/static/register.css
@@ -1,8 +1,8 @@
 .container{
   margin: auto;
   display: grid ;
-  grid-template-columns:200px 500px 1fr;
-
+  grid-template-columns:400px 100px 1fr;
+ 
 }
 
 
@@ -61,10 +61,10 @@
   background-color: #252525;
   width: 100%;
   
-<<<<<<<<< Temporary merge branch
+
 }
-====
-}
+
+
 
 .formulario__grupo-correcto .formulario__validacion-estado {
 	color: #1ed12d;
@@ -92,12 +92,13 @@
 .formulario__mensaje-exito-activo {
 	display: block;
 }
-main {
+.main {
 	
-	width: 60%;
+	
 	margin: auto;
 	padding: 40px;
-  background-image: linear-gradient(0, #65739f 0, #474f68 50%, #2b2e36 100%);
+  background-image: url(img/moradp.webp);
+
 }
 formulario__input-error {
 	font-size: 12px;
@@ -131,4 +132,7 @@ formulario__input-error {
 	padding: 0 15px;
 	border-radius: 3px;
 	display: none;
+}
+.btn-primary{
+  background-color: #1ed12d;
 }
