--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -1,77 +1,111 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <meta charset="utf-8">
-  <title>Register</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-  <!-- Google Fonts -->
-  <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="{{url_for('static',filename ='Global.css')}}">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
- </head>
- <body style="background-color:#ccc;">
- <div class="container">
-   <div class="row main">
-    <div class="main-login main-center">
-    <h5>Register New user or login existing account</h5>
-     <form action="{{ url_for('register') }}" method="post" autocomplete="off"> 
-      <div class="form-group">
-       <label for="name" class="cols-sm-2 control-label">nombre</label>
-       <div class="cols-sm-10">
-        <div class="input-group">
-         <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-         <input type="text" class="form-control" name="fullname" id="fullname"  placeholder="ingresa tu nombre"/>
+
+<head>
+    <meta charset="utf-8">
+    <br>
+    <br>
+    <br>
+
+    <title>Register</title>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+    <!-- Google Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet"
+        id="bootstrap-css">
+    <link rel="stylesheet" href="{{url_for('static',filename ='Global.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='register.css') }}">
+</head>
+
+<body>
+
+
+
+
+
+    <div class="container">
+        <div class="row main">
+            <div class="main-login main-center">
+                <h5>Register </h5>
+                <form action="{{ url_for('register') }}" method="post" autocomplete="off">
+                    <div class="form-group">
+                        <label for="name" class="cols-sm-2 control-label">nombre</label>
+                        <div class="cols-sm-10">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                                <input type="text" class="form-control" name="fullname" id="fullname"
+                                    placeholder="ingresa tu nombre" />
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label for="username" class="cols-sm-2 control-label">correo</label>
+                        <div class="cols-sm-10">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+                                <input type="email" class="form-control" name="username" id="username"
+                                    placeholder="correo" required>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="password" class="cols-sm-2 control-label">contraseña</label>
+                        <div class="cols-sm-10">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-lock fa-lg"
+                                        aria-hidden="true"></i></span>
+                                <input type="password" class="form-control" name="password" placeholder="Password"
+                                    id="password" required placeholder="Enter your Password" />
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="form-group ">
+                        {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                        {% for message in messages %}
+                        <div class="alert alert-success alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">×</span>
+                            </button>
+                        </div>
+                        {% endfor %}
+                        {% endif %}
+                        {% endwith %}
+                        <input type="submit" value="Register" class="form-control btn btn-primary " name="">
+                        <p style="padding:5px;">
+                            <a href="{{ url_for('login') }}" class="btn btn-dark ">Login</a>
+                        </p>
+
+                    </div>
+
+                </form>
+            </div>
         </div>
-       </div>
-      </div>
-  
-  
-      <div class="form-group">
-       <label for="username" class="cols-sm-2 control-label">correo</label>
-       <div class="cols-sm-10">
-        <div class="input-group">
-         <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
-         <input type="email" class="form-control" name="username" id="username" placeholder="correo" required>
+        <div>
+
+      
         </div>
-       </div>
-      </div>
-  
-      <div class="form-group">
-       <label for="password" class="cols-sm-2 control-label">contraseña</label>
-       <div class="cols-sm-10">
-        <div class="input-group">
-         <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-         <input type="password" class="form-control" name="password" placeholder="Password" id="password" required  placeholder="Enter your Password"/>
+        <div>
+          <img src="{{url_for('static',filename ='img/imagenlogin.png')}}" alt="" width = "400px">
+      
         </div>
-       </div>
-      </div>
-  
-      <div class="form-group ">
-        {% with messages = get_flashed_messages()  %}
-        {% if messages %}
-        {% for message in messages %}
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-          {{ message }}
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">×</span>
-          </button>
-        </div>
-        {% endfor %}
-        {% endif %}
-        {% endwith %}
-       <input type="submit" value="Register" class="form-control btn btn-primary " name="">
-       <p style="padding:5px;">
-       <a href="{{ url_for('login') }}" class="btn btn-dark ">Login</a></p>
-        
-      </div>
-        
-     </form>
     </div>
-   </div>
-  </div>
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  
- </body>
+    <div>
+
+      
+    </div>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+</body>
+
 </html>
