--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -3,9 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <br>
-    <br>
-    <br>
+   
 
     <title>Register</title>
 
@@ -20,9 +18,16 @@
     <link rel="stylesheet" href="{{url_for('static',filename ='Global.css')}}">
     <link rel="stylesheet" href="{{ url_for('static', filename='register.css') }}">
 </head>
-
+<header>
+    <div class ="lgo">
+        <img src="{{url_for('static',filename ='img/logo.png')}}" alt="" width = "400px">
+      </div>
+      <br>
+      <br>
+      
+</header>
 <body>
-
+    
 
 
 
