--- a/src/templates/ajustes.html
+++ b/src/templates/ajustes.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>foutos art</title>
+    <title>FOUTOS ART</title>
 </head>
 <link rel="stylesheet" href="../public/css/Global.css">
 <link rel="stylesheet" href="../public/css/ajustes_style.css">
