--- a/src/templates/comunidad.html
+++ b/src/templates/comunidad.html
@@ -9,7 +9,7 @@
     
 
     <link rel="stylesheet" href="{{url_for('static',filename ='comunidad.css')}}">
-    <title>Document</title>
+    <title>FOUTOS ART</title>
 </head>
 <header>
     {% extends './menu.html' %}
