--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
   
-{% block title %}Home{% endblock %}
+{% block title %}FOUTOS ART{% endblock %}
   
 {% block content %}
 <h1 class="h2">Dashboard</h1>
