--- a/src/app/static/menu.css
+++ b/src/app/static/menu.css
@@ -6,6 +6,7 @@ h2{
 button{
     background-color: rgba(0, 0, 0, 0);
     color: white;
+    border-color: rgba(255, 0, 0, 0) transparent;
     padding-left: 40px;
     font-size: 14px;
     text-align: left;
@@ -43,7 +44,7 @@ button{
    
 }
 .userimg img{
-    padding-right: 20px;
+    padding-right: 3px;
     padding-top: 5px;
     
     }
@@ -91,6 +92,14 @@ z-index:1;
 .central_buton {
     text-align: center;
     height: 45px;
+}
+.userimg img{
+    
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
 }
 
 
