--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FOUTOS ART</title>
     <link rel="icon" href="https://e7.pngegg.com/pngimages/182/19/png-clipart-square-shape-blue-square-s-angle-white.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
@@ -86,7 +86,7 @@
            {%for id_foto in Fot %}
             <div class="cont_img">
                 <img src="./static/img/todos/{{ id_foto.imagen }}" alt="">
-             </div>
+            </div>
             
             {% endfor %}                                                
           
