--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>FOUTOS ART</title>
+    <link rel="icon" href="https://e7.pngegg.com/pngimages/182/19/png-clipart-square-shape-blue-square-s-angle-white.png" type="image/x-icon">
     
     
 </head>
@@ -16,6 +16,8 @@
 
 <header>
     {% block menu_bar  %}
+    <title>FOUTOS ART</title>
+
     <link rel="icon" href="https://e7.pngegg.com/pngimages/182/19/png-clipart-square-shape-blue-square-s-angle-white.png" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -28,7 +30,7 @@
         </div>
         <div class="central">
             <div>
-                <a href="../comunidad"><button class="central_buton">Comunidad</button></a>
+                
                 <button class="central_buton"> Trending</button>
                 
                 <button type="" id="pen-clo" class="central_buton"> Category</button>
@@ -42,7 +44,7 @@
                    <h2> {{account['fullname']}}</h2>
                    
                 </div>
-                <div class="userimg">  <img src="{{url_for('static',filename ='img/imagenlogin.png')}}" alt=""  height="35px" id="close-open"></div>
+                <div class="userimg"> <img src="./static/img/todos/{{ account.imagen }}"  alt=""  height="40px" width= "40px" id="close-open"></div>
 
 
 
@@ -80,21 +82,18 @@
 
             </div>
             <div>
-                <a href="{{ url_for('profile') }}">configuracion</a>
+                <a href="{{ url_for('config.confi') }}">configuracion</a>
 
             </div>
             <div>
-                <a href="{{ url_for('subirfoto.subirfoto') }}">upload</a>
+                <a href="{{ url_for('imagen') }}">upload</a>
 
             </div>
             <div>
-                <a href="">mis fotos</a>
+                <a href="{{ url_for('misfotos.mios') }}">mis fotos</a>
 
             </div>
-            <div>
-                <a href="">cuentas</a>
-
-            </div>
+           
             <div>
                 <a href="{{ url_for('logout') }}">cerrar secion </a>
 
