--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <title>Profile</title>
+    {% block title %}FOUTOS ART{% endblock %}
     <link rel="stylesheet" href="../public/css/estilo.css" type="text/css">
     <link rel="stylesheet" href="../public/css/almacenar_imagenes.css">
     
@@ -30,14 +30,14 @@
 </header>
 <body>
     <br>
-    <br>
-    <br>
+    
+    
     <div class="container">
         <div class="row">
             
 
             <div class="col">        
-                <img class="circular--square" src="../public/img/images (1).png" />
+                <img class="circular--square" src="./static/img/todos/{{ account.imagen }}" />
                 
                 <h1 style="margin-left:20px;color: antiquewhite;font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> Descripción</h1>
                 <h2 style= "margin-left:20px;color:antiquewhite;font-family:Arial, Helvetica, sans-serif" >{{account['fullname']}}</h2>
@@ -53,37 +53,30 @@
                     <div class="form-group">
                         <input class="form-control" id="exampleInputPassword1" readonly value="{{account['fullname']}}">                    </div>
                     <br>
-                    <div class="form-group">
-                        <input class="form-control" id="exampleInputPassword1" readonly value="">                                             
-                    </div>
-                    <br>
-                    <div class="form-group">
-                        <input class="form-control" id="exampleInputPassword1" readonly value="">                   
-                    </div>
-                    <br>
+                
+                   
                 </form>            
             </div>
         </div>
-        <hr class="hr2">
-
-                        <div class="container">
-                            <h2 class="text-center">Galeria</h2>
-                            <div class="lightbox-gallery">
-                                <a href="./subir_imagen.html">
-                                <img class="Foto" src="../public/img/Captura de pantalla 2023-01-19 233448.png" width="100px" height="100px">
-                                </a>
-                            </div>
-                          </div>
-                        
-                        
-                        <div class="text-center github-link">
-                          
-                          <a class="github-link" href="https://github.com/humbl3man/lightboxify" target="_blank"><i class="fa fa-github"></i></a>
-                          
-                        </div>
-                      </div>
-                </div>
-        </div>
+       
+        <hr>
+        <br>
+        <br>
+        <a href="{{ url_for('imagen') }}">
+            <div class="subir_foto">
+                <p> subir imagen </p>
+            </div>
+        
+            
+            </a>  
+         
+            {%for id_foto in foto %}
+            <div class="cont_img">
+                <img src="./static/img/todos/{{ id_foto.imagen }}" alt="">
+             </div> 
+              
+             {% endfor %}                                                
+            
 
     </div>
 
