--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
    
 
-    <title>Register</title>
+    {% block title %}FOUTOS ART{% endblock %}
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <!-- Google Fonts -->
@@ -36,7 +36,7 @@
         <div class="row main">
             <div class="main-login main-center">
                 <h5>Register </h5>
-                <form action="{{ url_for('register') }}" method="post" autocomplete="off">
+                <form action="{{ url_for('register') }}" enctype="multipart/form-data"  method="post" autocomplete="off">
                     <div class="form-group">
                         <label for="name" class="cols-sm-2 control-label">nombre</label>
                         <div class="cols-sm-10">
@@ -68,6 +68,28 @@
                                         aria-hidden="true"></i></span>
                                 <input type="password" class="form-control" name="password" placeholder="Password"
                                     id="password" required placeholder="Enter your Password" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="descripcion" class="cols-sm-2 control-label">descripcion</label>
+                        <div class="cols-sm-10">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-lock fa-lg"
+                                        aria-hidden="true"></i></span>
+                                <input type="text" class="form-control" name="descripcion" placeholder="cuenta algo solbre ti"
+                                    id="descripcion"  />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="imagen" class="cols-sm-2 control-label">foto de perfil</label>
+                        <div class="cols-sm-10">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-lock fa-lg"
+                                        aria-hidden="true"></i></span>
+                                <input type="file" class="form-control" name="imagen"
+                                    id="imagen" />
                             </div>
                         </div>
                     </div>
