--- a/src/templates/subir_foto.html
+++ b/src/templates/subir_foto.html
@@ -6,7 +6,7 @@
 		<!-- JavaScript Bundle with Popper -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="{{url_for('static',filename ='style.css')}}">
-		<title>Vista de perfil de fotos </title>
+		{% block title %}FOUTOS ART{% endblock %}
 
 		
 
