--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    {% block title %}FOUTOS ART{% endblock %}
+
     <link rel="stylesheet" href="../public/css/estilo.css" type="text/css">
     <link rel="stylesheet" href="../public/css/almacenar_imagenes.css">
     
@@ -40,7 +40,7 @@
                 <img class="circular--square" src="./static/img/todos/{{ account.imagen }}" />
                 
                 <h1 style="margin-left:20px;color: antiquewhite;font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> Descripción</h1>
-                <h2 style= "margin-left:20px;color:antiquewhite;font-family:Arial, Helvetica, sans-serif" >{{account['fullname']}}</h2>
+                <h2 style= "margin-left:20px;color:antiquewhite;font-family:Arial, Helvetica, sans-serif" >{{account['descripcion']}}</h2>
             </div>
             <div class="col" style="margin-left:-40px" >
               
